--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "echarts": "^3.5.4",
     "element-ui": "^1.2.9",
+    "lodash": "^4.17.4",
     "time-formater": "^1.0.1",
     "vue": "^2.2.6",
     "vue-quill-editor": "^2.2.1",
