--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts": "^3.5.4",
     "element-ui": "^1.2.9",
     "lodash": "^4.17.4",
+    "prismjs": "^1.6.0",
     "time-formater": "^1.0.1",
     "vue": "^2.2.6",
     "vue-quill-editor": "^2.2.1",
